# gitlab_pr_analysis

./: .env.example  .env.swp  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements-enrich.txt
.github/workflows/: ci-and-refresh.yml
.gitlab/merge_request_templates/: Default.md
.venv-qodo/: pyvenv.cfg
docs/: security_incident_response.md
prtool/: audit.py  classifier.py  cli.py  cli.py.bak_cleanup_cmd  config.py  db.py  enrich.py  export.py  feature_extractor.py  gitlab_client.py  memory.py  pipeline.py  seed_data.py  viewer.py
prtool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: check_mr_metadata.sh
tests/: conftest.py  test_cleanup.py  test_cli_perf_flags.py  test_cli_scope_precedence.py  test_cli_tools.py  test_db_project_ids.py  test_demo_seed.py  test_dotenv.py  test_enrich.py  test_export_cli_scope.py  test_export_scope.py  test_group_resolution.py  test_infra_classifier.py  test_memory.py  test_memory_export_cli.py  test_memory_materialize_cli.py  test_mr_context_cli.py  test_pipeline_qodo_fallback.py  test_project_resolution.py  test_project_windows.py  test_projects_count.py  test_projects_list_rank.py  test_qodo_threshold_cli.py  test_reclassify_cli.py  test_schema.py  test_viewer.py
